--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "description": "Servidor HTTP básico para Mercado Liebre",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
+    "start": "node --watch index.js",
     "test": "node --test tests/*.test.js"
-  },
-  "devDependencies": {
-    "node:test": "^20.0.0"
   }
 }
